# gaze

./: .gitignore  Readme.md  pyproject.toml
src/: main.py
src/GFIE/: depth_map_creator.py  main.py  tester.py  trainer.py
src/GFIE/config/: default.py  gfiebenchmark.yaml
src/GFIE/dataset/: gfie.py
src/GFIE/dataset/metric_depth/: experiments.py
src/GFIE/gfiemodel/: gfiemodule.py
src/GFIE/logs/2025-04-09_21-18-44/: events.out.tfevents.1744247924.mareep
src/GFIE/logs/2025-04-12_16-46-16/: events.out.tfevents.1744490776.mareep
src/GFIE/utils/: infer_engine.py  model_utils.py
src/gazepoint/: dataset_loader.py  logger_module.py  main.py  model_zoo.py  run_main.sh  utils.py
src/gazepoint/gazefollow/: main.py  test.py
src/gazepoint/gfie/: Readme.md  dataset.py  main.py  model_zoo.py  resnet.py
src/gazepoint/gfie/orig/: gfie.yaml  main.py  (+2 more)
src/mediapipe/: main.ipynb
src/mpigaze/: run_demo.sh
src/mpigaze/ptgaze/: demo.py  gaze_estimator.py  main.py
src/object-aware-gaze-target-detection/: pyproject.toml
src/object-aware-gaze-target-detection/configs/datamodule/: gazefollow_objects.yaml
src/object-aware-gaze-target-detection/configs/model/: gotd.yaml
src/object-aware-gaze-target-detection/configs/paths/: default.yaml
src/object-aware-gaze-target-detection/configs/trainer/: default.yaml  gpu.yaml
src/object-aware-gaze-target-detection/outputs/2024-10-28/16-11-05/.hydra/: hydra.yaml
src/object-aware-gaze-target-detection/scripts/: gazefollow_get_aux_faces.py
src/object-aware-gaze-target-detection/src/: train.py
src/roboflow/: Readme.md
(+187 files in other folders)
