[tool.poetry]
name = "gaze"
version = "0.1.0"
description = ""
authors = ["tonmoy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
requests = "^2.31.0"
setuptools = "^69.0.3"
python-dotenv = "^1.0.0"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
scipy = "^1.11.4"
pyyaml = "^6.0.1"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
