[tool.poetry]
name = "object-aware-gaze-target-detection"
version = "0.1.0"
description = ""
authors = ["tonmoy"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
hydra-core = "^1.3.2"
pytorch-lightning = "^2.4.0"
pyrootutils = "^1.0.4"
rich = "^13.9.2"
torchvision = "^0.19.1"
wandb = "^0.18.3"
pandas = "^2.2.3"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

